--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "standard-version": "^9.5.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "sveltekit-superforms": "^0.7.1",
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "zod": "^3.21.4"
   },
   "type": "module"
 }
