--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --port 5555",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -40,5 +40,11 @@
     "vite": "^4.2.0",
     "zod": "^3.21.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "flowbite": "^1.6.5",
+    "flowbite-svelte": "^0.37.3",
+    "moment": "^2.29.4",
+    "svelte-infinite-scroll": "^2.0.1"
+  }
 }
