--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "inquirer": "^8.2.5",
-    "postcss": "^8.4.22",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.7",
     "prettier-plugin-svelte": "^2.10.0",
     "standard-version": "^9.5.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "sveltekit-superforms": "^0.7.1",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.2.0",
@@ -42,6 +42,7 @@
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.4.0",
     "flowbite": "^1.6.5",
     "flowbite-svelte": "^0.37.3",
     "moment": "^2.29.4",
