--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "standard-version": "^9.5.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-magnifier": "^0.0.1",
     "sveltekit-superforms": "^0.7.1",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
@@ -45,7 +46,10 @@
     "axios": "^1.4.0",
     "flowbite": "^1.6.5",
     "flowbite-svelte": "^0.37.3",
+    "json-schema": "^0.4.0",
     "moment": "^2.29.4",
-    "svelte-infinite-scroll": "^2.0.1"
+    "plantuml-encoder": "^1.4.0",
+    "svelte-infinite-scroll": "^2.0.1",
+    "svelte-preprocess-react": "^0.15.0"
   }
 }
