--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-vercel": "^2.4.1",
     "@sveltejs/kit": "^1.5.0",
+    "@types/plantuml-encoder": "^1.4.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.14",
